# Poisson-Equation

./: CMakeLists.txt  README.md  grid.cpp  grid.hpp  main.cpp  plots.ipynb  poissonSolver.cpp  poissonSolver.hpp  solver.cpp  solver.hpp  solverGradient.cpp  solverGradient.hpp  solverParabolic.cpp  solverParabolic.hpp  solverRandom.cpp  solverRandom.hpp  solverSOR.cpp  solverSOR.hpp
